# wuji-hand-description

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  package.xml  params.csv
.github/workflows/: auto-release.yml  create_release_tag.yaml
docking/meshes/: hand_docking_link.STL
docking/mjcf/: docking.xml
docking/urdf/: docking-ros.urdf  docking.urdf
docking/usd/: docking.usda
launch/: display.launch.py  display.left.py  display.right.py
meshes/left/: finger1_link1_collision.STL  finger1_link2_collision.STL  finger1_link3_collision.STL  finger1_link4_collision.STL  finger1_tip_link_collision.STL  finger2_link1_collision.STL  finger2_link2_collision.STL  finger2_link3_collision.STL  finger2_link4_collision.STL  finger2_tip_link_collision.STL  finger3_link1_collision.STL  finger3_link2_collision.STL  finger3_link3_collision.STL  finger3_link4_collision.STL  finger3_tip_link_collision.STL  finger4_link1_collision.STL  finger4_link2_collision.STL  finger4_link3_collision.STL  finger4_link4_collision.STL  finger4_tip_link_collision.STL  finger5_link1_collision.STL  finger5_link2_collision.STL  finger5_link3_collision.STL  finger5_link4_collision.STL  finger5_tip_link_collision.STL  left_finger1_link1.STL  left_finger1_link2.STL  left_finger1_link3.STL  left_finger1_link4.STL  left_finger1_tip_link.STL  left_finger1_tip_link_xml.STL  left_finger2_link1.STL  left_finger2_link2.STL  left_finger2_link3.STL  left_finger2_link4.STL  left_finger2_tip_link.STL  left_finger3_link1.STL  left_finger3_link2.STL  left_finger3_link3.STL  left_finger3_link4.STL  (+13 more)
meshes/right/: finger1_link1.STL  finger1_link1_collision.STL  finger1_link2.STL  finger1_link2_collision.STL  finger1_link3.STL  finger1_link3_collision.STL  finger1_link4.STL  finger1_link4_collision.STL  finger1_tip_link.STL  finger1_tip_link_collision.STL  finger2_link1.STL  finger2_link1_collision.STL  finger2_link2.STL  finger2_link2_collision.STL  finger2_link3.STL  finger2_link3_collision.STL  finger2_link4.STL  finger2_link4_collision.STL  finger2_tip_link.STL  finger2_tip_link_collision.STL  finger3_link1.STL  finger3_link1_collision.STL  finger3_link2.STL  finger3_link2_collision.STL  finger3_link3.STL  finger3_link3_collision.STL  finger3_link4.STL  finger3_link4_collision.STL  finger3_tip_link.STL  finger3_tip_link_collision.STL  finger4_link1.STL  finger4_link1_collision.STL  finger4_link2.STL  finger4_link2_collision.STL  finger4_link3.STL  finger4_link3_collision.STL  finger4_link4.STL  (+42 more)
mjcf/: left.xml  right.xml
mjx/: left_mjx.xml  right_mjx.xml
rviz/: left.rviz  right.rviz  robot_display.rviz
urdf/: left-ros.urdf  left.urdf  right-ros.urdf  right.urdf
usd/: left.usd  right.usd
(+58 files in other folders)
