<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wuji_hand_description</name>
  <version>1.0.1</version>
  <description>
    WUJI hand description package with URDF, MJCF, MJX, and USD assets for
    simulation, visualization, and ROS 2 integration.
  </description>

  <maintainer email="dev@wuji.tech">WUJI Technology</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/wuji-technology/wuji-hand-description</url>
  <url type="repository">https://github.com/wuji-technology/wuji-hand-description</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
